--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
     display: flex;
     align-items: center;
     background: rgb(160,255,140);
-    background: linear-gradient(180deg, rgba(160,255,140,1) 0%, rgba(107,194,102,1) 50%, rgba(54,54,54,1) 100%);    
+    background: linear-gradient(180deg, rgba(160,255,140,1) 0%, rgba(107,194,102,1) 50%, rgba(54,54,54,1) 100%); 
+    min-width: 530px;   
 }
 
 .main{
